<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.klojang</groupId>
    <artifactId>klojang</artifactId>
    <version>2.0.0</version>

    <name>Klojang</name>

    <properties>

        <!-- ==================================================================== -->
        <!-- *** Build settings                                               *** -->
        <!-- ==================================================================== -->
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- ==================================================================== -->
        <!-- *** Maven plugin versions                                        *** -->
        <!-- *** Check for updates: mvn versions:display-plugin-updates       *** -->
        <!-- ==================================================================== -->
        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
        <maven-checkstyle-plugin.version>3.1.1</maven-checkstyle-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.3.1</maven-javadoc-plugin.version>
        <git-commit-id-plugin.version>4.0.3</git-commit-id-plugin.version>

        <!-- ==================================================================== -->
        <!-- *** Library dependencies                                         *** -->
        <!-- *** Check for updates: mvn versions:display-dependency-updates   *** -->
        <!-- *** Check dependencies: mvn dependency:analyze                   *** -->
        <!-- ==================================================================== -->
        <naturalis-common.version>3.0.6</naturalis-common.version>
        <commons-text.version>1.9</commons-text.version>
        <apache-httpclient.version>4.5.13</apache-httpclient.version>
        <slf4j.version>1.7.31</slf4j.version>
        <junit.version>5.7.0</junit.version>
        <h2.version>1.4.200</h2.version>


    </properties>


    <organization>
        <name>Naturalis Biodiversity Center</name>
        <url>http://www.naturalis.nl</url>
    </organization>


    <distributionManagement>
        <repository>
            <id>naturalis</id>
            <url>http://mvnrepository.naturalis.io/repository/naturalis</url>
        </repository>
        <snapshotRepository>
            <id>naturalis</id>
            <url>http://mvnrepository.naturalis.io/repository/naturalis</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>

        <!-- NATURALIS -->
        <dependency>
            <groupId>nl.naturalis.common</groupId>
            <artifactId>naturalis-common</artifactId>
            <version>${naturalis-common.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${apache-httpclient.version}</version>
        </dependency>


        <!-- LOGGING-->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <!-- TEST -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven-enforcer-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven-checkstyle-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${git-commit-id-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.6.3,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[11,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <configuration>
                    <dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>
                        ${project.build.outputDirectory}/${project.artifactId}.git.properties
                    </generateGitPropertiesFilename>
                    <format>properties</format>
                    <dateFormat>yyyy-MM-dd HH:mm:ss</dateFormat>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-git-properties</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>check-style</id>
                        <configuration>
                            <configLocation>google_checks.xml</configLocation>
                            <encoding>UTF-8</encoding>
                            <failsOnError>true</failsOnError>
                            <consoleOutput>true</consoleOutput>
                            <includeTestSourceDirectory>true
                            </includeTestSourceDirectory>
                        </configuration>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <failOnError>false</failOnError>
                    <failOnWarnings>false</failOnWarnings>
                    <quiet>true</quiet>
                    <doclint>none</doclint>
                    <excludePackageNames>org.klojang.x:org.klojang.x.*
                    </excludePackageNames>
                </configuration>
                <executions>
                    <execution>
                        <id>attach</id>
                        <goals>
                            <goal>aggregate-jar</goal>
                        </goals>
                        <configuration>
                            <doctitle>Klojang ${project.version}</doctitle>
                            <detectLinks>true</detectLinks>
                            <show>protected</show>
                            <excludePackageNames>org.klojang.x:org.klojang.x.*
                            </excludePackageNames>
                            <sourcepath>src/main/java</sourcepath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>create-apidocs</id>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                        <inherited>false</inherited>
                        <phase>install</phase>
                        <configuration>
                            <doctitle>Klojang ${project.version}</doctitle>
                            <description>
                                Klojang Web Templates API
                            </description>
                            <detectLinks>true</detectLinks>
                            <show>protected</show>
                            <excludePackageNames>org.klojang.x:org.klojang.x.*
                            </excludePackageNames>
                            <sourcepath>src/main/java</sourcepath>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

    </build>

</project>